Fix ignore button bug on mobile device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,6 +270,7 @@ footer {
     right: 20px;
     top: 10px;
     color: gray;
+    cursor: pointer;
 }
 
 .ignore-btn:hover {
